[package]
name = "srtp"
version = "0.7.0"
authors = ["Hyeonu Park <nemo1275@gmail.com>"]
edition = "2018"

description = "Rusty wrapper for libsrtp2"
documentation = "https://docs.rs/srtp/0.7.0/srtp"
repository = "https://github.com/HyeonuPark/srtp"
keywords = ["srtp"]
categories = ["multimedia", "network-programming"]
license = "MIT OR Apache-2.0"

[dependencies]
srtp2-sys = "3.0"
paste = "1.0"
bytes = {version = "0.6", optional = true}

[features]
default = ["bytes"]
